# mcomix-lite

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.md  README.md  clang-format.sh  clang-tidy.sh  configure-clang.sh  configure-gcc.sh  installer.py  mcomix-authors  mcomix-deprecated.py  mcomix-profile.py  mcomix-starter.py  mcomixdeprecated.py  mcomixstarter.py  meson.build  meson_options.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
man/: mcomix.1
mcomix/: __init__.py  about_dialog.py  anime_executor.py  anime_framebuffer.py  anime_tools.py  archive_extractor.py  archive_tools.py  bindings.cpp  bookmark_backend.py  bookmark_dialog.py  bookmark_menu.py  bookmark_menu_item.py  box.py  callback.py  clipboard.py  comicthumb.py  comment_dialog.py  config.py  config_backend.py  constants.py  cursor_handler.py  dialog_chooser.py  dialog_handler.py  enhance_backend.py  enhance_dialog.py  enums.hpp  event.py  event_handler.py  file_chooser.py  file_chooser_base_dialog.py  file_chooser_main_dialog.py  file_handler.py  file_provider.cpp  file_provider.hpp  file_provider.py  file_size.py  filesystem_actions.py  histogram.py  hyperrectangles.py  icons.py  (+58 more)
mcomix/_enums/: animation.py  config_files.py  dialog_choice.py  double_page.py  file_sort.py  file_types.py  image_scaling.py  mcomix.py  meson.build  page_orientation.py  scroll.py  zoom_modes.py
mcomix/archive/: __init__.py  archive_base.py  archive_builtin.py  archive_executable.py  archive_external.py  archive_interface.py  archive_recursive.py  format_libarchive.py  format_rar.py  format_sevenzip.py  format_tar.py  format_zip.py  meson.build  pdf.py  rar.py  sevenzip.py  zip.py
mcomix/dialog/: dialog_about.py  dialog_base.py  dialog_enhance.py  dialog_file_chooser.py  dialog_keybindigs.py  dialog_preferences.py  dialog_properties.py
mcomix/enum/: config_files.py  mcomix.py  page_orientation.py  scroll.py  zoom_modes.py
mcomix/enums/: __init__.py  animation.py  config_files.py  double_page.py  meson.build
mcomix/fallback/: layout.py  meson.build
mcomix/formats/: archive.py  image.py  meson.build
mcomix/gui/: bookmark_menu.py  bookmark_menu_item.py  cursor_handler.py  dialog_chooser.py  input_handler.py  main_window.py  menubar.py  meson.build  statusbar.py  thumbnail_sidebar.py  thumbnail_view.py
mcomix/gui/dialog/: about.py  bookmark.py  file_chooser.py  info.py  keybindings.py  keybindings_editor.py  meson.build  pageselect.py  preferences.py  preferences_page.py  preferences_section.py  properties.py  remember.py
mcomix/gui/images/: meson.build
mcomix/gui/lib/: box.cpp  box.hpp  layout.cpp  layout.hpp  zoom.cpp  zoom.hpp
mcomix/lib/: callback.py  events.py  exceptions.py  executable.py  meson.build  metaclass.py  mt.py  process.py  reader.py  threadpool.py
mcomix/mcomix/: about_dialog.py  anime_tools.py  archive_extractor.py  archive_packer.py  archive_tools.py  bookmark_backend.py  bookmark_dialog.py  bookmark_menu.py  bookmark_menu_item.py  box.py  callback.py  clipboard.py  comment_dialog.py  constants.py  cursor_handler.py  dialog_handler.py  edit_comment_area.py  edit_dialog.py  edit_image_area.py  enhance_backend.py  enhance_dialog.py  event.py  file_chooser_base_dialog.py  file_chooser_library_dialog.py  file_chooser_main_dialog.py  file_chooser_simple_dialog.py  file_handler.py  file_provider.py  histogram.py  i18n.py  icons.py  image_handler.py  image_tools.py  keybindings.py  keybindings_editor.py  keybindings_map.py  labels.py  last_read_page.py  layout.py  lens.py  (+27 more)
mcomix/mcomix/archive/: __init__.py  archive_base.py  archive_recursive.py  lha_external.py  pdf_external.py  rar.py  rar_external.py  sevenzip_external.py  tar.py  zip.py  zip_external.py
mcomix/message_dialog/: info.py  meson.build  remember.py
mcomix/providers/: file_provider_base.py  file_provider_ordered.py  file_provider_predefined.py  meson.build
mcomix/sort/: meson.build  sort.cpp  sort.hpp  sort_alphanumeric.py  utils.cpp  utils.hpp
mcomix/sort/natsort/: README.md  strnatcmp.cpp  strnatcmp.hpp
mcomix/state/: meson.build  view_state.py
mime/: mcomix.desktop  mcomix.xml
pch/: pch.hxx
share/applications/: mcomix.desktop
share/metainfo/: mcomix.appdata.xml
src/: logger.cxx  logger.hxx  main.cxx  types.hxx
src/commandline/: commandline.cxx  commandline.hxx
src/crash/: crash.cxx  crash.hxx
src/gui/: main-window.cxx  main-window.hxx  menubar.cxx  menubar.hxx  statusbar.cxx  statusbar.hxx  thumbbar.cxx  thumbbar.hxx  viewport.cxx  viewport.hxx
src/settings/: config-load.cxx  config-save.cxx  config.cxx  config.hxx  property.hxx  settings.hxx
src/vfs/: bookmarks.cxx  bookmarks.hxx  error.cxx  (+17 more)
test/: __init__.py  run.py  test_archive_tools.py  test_archives.py  test_image_tools.py  test_process.py
tests/: conftest.py  meson.build  test_file_provider.py  test_file_size.py  test_sort_alphanumeric.py
tests/enums/: test_enum_animation.py  test_enum_config_files.py  test_enum_double_page.py  test_enum_file_sort.py  test_enum_image_scaling.py  test_enum_page_orientation.py  test_enum_scroll.py  test_enum_zoom_modes.py
tests/fallback/: box.py  zoom.py
tests/formats/: test_is_supported_archive.py  test_is_supported_image.py
tests/lib/: test_metaclass.py
tests/mcomix/: test_box.py  test_file_provider.py  test_file_size.py  test_layout.py  test_sort_alphanumeric.py  test_zoom.py
tests/mcomix/enums/: test_enum_animation.py  test_enum_config_files.py  test_enum_double_page.py  test_enum_file_sort.py  test_enum_file_types.py  test_enum_image_scaling.py  test_enum_page_orientation.py  test_enum_scroll.py  test_enum_zoom_modes.py
tests/mcomix/formats/: test_is_supported_archive.py  test_is_supported_image.py
tests/mcomix/lib/: test_metaclass.py
tests/mcomix/state/: test_view_state.py
tests/providers/: test_file_provider_ordered.py
tests/src/: main.cxx  utils.hxx
tests/src/settings/: property.cxx
tests/src/vfs/: error.cxx  trash.cxx
tests/src/vfs/utils/: file-ops.cxx  natsort.cxx  utils.cxx
tools/: crash-recovery.fish
(+46 files in other folders)
