option(
    'tests',
    type : 'boolean',
    value : false,
    description : 'Build the test suite'
)

option(
    'dev',
    type : 'boolean',
    value: false,
    description : 'enable development features'
)

option(
    'with-system-glaze',
    type : 'boolean',
    value: false,
    description : 'Use system glaze instead of bundled version'
)

option(
    'with-system-spdlog',
    type : 'boolean',
    value: false,
    description : 'Use system spdlog instead of bundled version'
)

option(
    'with-system-ztd',
    type : 'boolean',
    value: false,
    description : 'Use system ztd instead of bundled version'
)
