option(
    'tests',
    type : 'boolean',
    value : false,
    description : 'Build the test suite'
)

option(
    'dev',
    type : 'boolean',
    value: false,
    description : 'enable development features'
)

option(
    'use-pixbuf-backend',
    type : 'boolean',
    value: true,
    description : 'Use the deprecated Gdk::Pixbuf backend, otherwise use the new Gdk::Texture backend'
)

option(
    'with-system-glaze',
    type : 'boolean',
    value: false,
    description : 'Use system glaze instead of bundled version'
)

option(
    'with-system-spdlog',
    type : 'boolean',
    value: false,
    description : 'Use system spdlog instead of bundled version'
)

option(
    'with-system-ztd',
    type : 'boolean',
    value: false,
    description : 'Use system ztd instead of bundled version'
)
