[metadata]
name = mcomix-lite
version = 3.4.0-dev
description = GTK manga/comic book viewer
long_description = MComix-Lite is a manga/comic reader.
                   Supports all archive formats supported by libarchive.
                   MComix-Lite is a fork of MComix3 which is a fork of MComix which is a fork of Comix.
maintainer = Brandon Zorn (thermitegod)
project_urls =
    github = https://github.com/thermitegod/mcomix-lite
license = GPL-2+
license_file = COPYING
platforms = linux
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
zip_safe = no
include_package_data = True
packages = find:
install_requires =
    libarchive-c
    loguru
    pillow
    pygobject
    pyyaml
    send2trash
    setuptools
    urllib3
    xxhash
python_requires = >=3.10
package_dir =
    =.

[options.entry_points]
console_scripts =
    mcomix = mcomix.main:main

[options.packages.find]
where = .
include =
    mcomix
    mcomix.*

[options.data_files]
share/man/man1 =
    man/mcomix.1
share/applications =
    mime/mcomix.desktop
share/metainfo =
    mime/mcomix.appdata.xml
share/mime/packages =
    mime/mcomix.xml

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    tox

[flake8]
max-line-length = 160
