python_sources = [
    '__init__.py',
    'archive_extractor.py',
    'bookmark_backend.py',
    'config_backend.py',
    'file_handler.py',
    'file_provider.py',
    'file_size.py',
    'filesystem_actions.py',
    'image_files.py',
    'image_handler.py',
    'image_tools.py',
    'keybindings_manager.py',
    'keybindings_map.py',
    'main.py',
    'preferences_manager.py',
    'preferences.py',
    'view_state.py',
]

py.install_sources(python_sources, subdir: 'mcomix')

subdir('archive')
subdir('gui')
subdir('lib')
subdir('providers')
