python_sources = [
    '__init__.py',
    'animation.py',
    'config_files.py',
    'dialog_choice.py',
    'double_page.py',
    'file_sort.py',
    'file_types.py',
    'mcomix.py',
    'page_orientation.py',
    'scroll.py',
    'zoom_modes.py',
]

py.install_sources(python_sources, subdir: 'mcomix/_enums')
