python_sources = [
    '__init__.py',
    'bookmark_menu.py',
    'bookmark_menu_item.py',
    'cursor_handler.py',
    'dialog_chooser.py',
    'main_window.py',
    'menubar.py',
    'input_handler.py',
    'statusbar.py',
    'thumbnail_sidebar.py',
    'thumbnail_view.py',
]

py.install_sources(python_sources, subdir: 'mcomix/gui')

subdir('dialog')
subdir('images')
