python_sources = [
    '__init__.py',
    'about.py',
    'bookmark.py',
    'file_chooser.py',
    'keybindings.py',
    'keybindings_editor.py',
    'info.py',
    'pageselect.py',
    'preferences.py',
    'preferences_page.py',
    'preferences_section.py',
    'properties.py',
    'properties_page.py',
    'remember.py',
]

py.install_sources(python_sources, subdir: 'mcomix/gui/dialog')
